test/tests/compiler/10_file-scope_variables_and_storage-class_specifiers/invalid_parse/plx1_pub_in_block_1.plx
pub fn main(none) i32 {
    pub foo: i32 = 0
    return foo
}
